src/cmds/jvm/snapshots/rtk__cmds__jvm__mvn_cmd__tests__filter_mvn_multi_verify_failure_stdout.snap
---
source: src/cmds/jvm/mvn_cmd.rs
expression: output
---
[INFO] --- surefire:3.5.5:test (default-test) @ core ---
[INFO] Tests run: 62, Failures: 0, Errors: 0, Skipped: 0
[INFO] --- failsafe:3.5.5:integration-test (default) @ app ---
[ERROR] Tests run: 6, Failures: 1, Errors: 0, Skipped: 0

[ERROR] Failures:
[ERROR]   com.example.app.UserProvisioningIT.shouldProvisionUser <<< FAILURE!
[ERROR]     AssertionFailedError: expected: <201> but was: <500>
[ERROR]     at com.example.app.UserProvisioningIT.shouldProvisionUser(UserProvisioningIT.java:88)
[INFO] Reactor Summary for app-parent 1.0.0-SNAPSHOT:
[INFO] core ............................................... SUCCESS [  6.123 s]
[INFO] app ................................................ FAILURE [ 41.108 s]
[INFO] BUILD FAILURE
