src/cmds/jvm/snapshots/rtk__cmds__jvm__mvn_cmd__tests__pass_digest_snapshot.snap
---
source: src/cmds/jvm/mvn_cmd.rs
expression: digest
---
# mvn test (from XML reports) — 5 passed, 8 skipped
.: MicrosoftEntraIdClient2Test 8 (0.0s)
services: UsersTest 5 (0.8s)
skipped:
  MicrosoftEntraIdClient2Test.should_read_client3_users — Work in progress - not ready for CI
  MicrosoftEntraIdClient2Test.should_read_client4_users — Work in progress - not ready for CI
  MicrosoftEntraIdClient2Test.should_read_client2_users2 — Work in progress - not ready for CI
  MicrosoftEntraIdClient2Test.should_read_vendor_groups — Work in progress - not ready for CI
  MicrosoftEntraIdClient2Test.should_read_client1_users — Work in progress - not ready for CI
  MicrosoftEntraIdClient2Test.should_read_client4_groups — Work in progress - not ready for CI
  MicrosoftEntraIdClient2Test.should_read_client2_users — Work in progress - not ready for CI
  MicrosoftEntraIdClient2Test.should_read_vendor_users — Work in progress - not ready for CI
