src/cmds/jvm/snapshots/rtk__cmds__jvm__mvn_cmd__tests__pass_inline_small_snapshot.snap
---
source: src/cmds/jvm/mvn_cmd.rs
expression: out
---
mvn test: 12 passed (3.1 s)
[INFO] Tests run: 5 -- in com.example.auth.user.UsersTest
