src/cmds/jvm/snapshots/rtk__cmds__jvm__mvn_cmd__tests__snapshot_clean_auth.snap
---
source: src/cmds/jvm/mvn_cmd.rs
expression: output
---
mvn clean: deleted /home/user/git/auth/target (1.418 s)
