src/cmds/jvm/snapshots/rtk__cmds__jvm__mvn_cmd__tests__snapshot_compile_auth.snap
---
source: src/cmds/jvm/mvn_cmd.rs
expression: output
---
[INFO] annotations
[INFO] comments
[INFO] sources
[INFO]   interfaces (immutable) : false
[INFO]   table-valued functions : true
[INFO] other
[INFO] BUILD SUCCESS
