src/cmds/jvm/snapshots/rtk__cmds__jvm__mvn_cmd__tests__snapshot_dep_tree_beacon.snap
---
source: src/cmds/jvm/mvn_cmd.rs
expression: output
---
[INFO] com.example:beacon:jar:1.0-SNAPSHOT
[INFO] +- org.springframework.boot:spring-boot-starter-web:jar:4.0.3:compile
[INFO] |  +- org.springframework.boot:spring-boot-starter-jackson:jar:4.0.3:compile (version managed from 4.0.3; scope not updated to compile)
[INFO] |  |  \- org.springframework.boot:spring-boot-jackson:jar:4.0.3:compile (version managed from 4.0.3)
[INFO] |  +- org.springframework.boot:spring-boot-starter-tomcat:jar:4.0.3:compile (version managed from 4.0.3; scope not updated to compile)
[INFO] |  |  +- org.springframework.boot:spring-boot-starter-tomcat-runtime:jar:4.0.3:compile (version managed from 4.0.3)
[INFO] |  |  |  +- org.apache.tomcat.embed:tomcat-embed-core:jar:11.0.18:compile (version managed from 11.0.18)
[INFO] |  |  |  \- org.apache.tomcat.embed:tomcat-embed-websocket:jar:11.0.18:compile (version managed from 11.0.18)
[INFO] |  |  \- org.springframework.boot:spring-boot-tomcat:jar:4.0.3:compile (version managed from 4.0.3)
[INFO] |  +- org.springframework.boot:spring-boot-http-converter:jar:4.0.3:compile (version managed from 4.0.3; scope not updated to compile)
[INFO] |  |  +- org.springframework.boot:spring-boot:jar:4.0.3:compile (version managed from 4.0.3; scope not updated to compile)
[INFO] |  |  \- org.springframework:spring-web:jar:7.0.5:compile (version managed from 7.0.5; scope not updated to compile)
[INFO] |  \- org.springframework.boot:spring-boot-webmvc:jar:4.0.3:compile (version managed from 4.0.3; scope not updated to compile)
[INFO] |     +- org.springframework.boot:spring-boot-servlet:jar:4.0.3:compile (version managed from 4.0.3)
[INFO] |     +- org.springframework:spring-webmvc:jar:7.0.5:compile (version managed from 7.0.5)
[INFO] +- org.springframework.boot:spring-boot-starter-data-jpa:jar:4.0.3:compile
[INFO] |  +- org.springframework.boot:spring-boot-starter-jdbc:jar:4.0.3:compile (version managed from 4.0.3)
[INFO] |  |  \- com.zaxxer:HikariCP:jar:7.0.2:compile (version managed from 7.0.2)
[INFO] |  +- org.springframework.boot:spring-boot-data-jpa:jar:4.0.3:compile (version managed from 4.0.3)
[INFO] |  |  +- org.springframework.boot:spring-boot-data-commons:jar:4.0.3:compile (version managed from 4.0.3)
[INFO] |  |  |  +- org.springframework.boot:spring-boot-persistence:jar:4.0.3:compile (version managed from 4.0.3)
[INFO] |  |  |  \- org.springframework.data:spring-data-commons:jar:4.0.3:compile (version managed from 4.0.3)
[INFO] |  |  +- org.springframework.boot:spring-boot-hibernate:jar:4.0.3:compile (version managed from 4.0.3)
[INFO] |  |  |  +- org.springframework.boot:spring-boot-jpa:jar:4.0.3:compile (version managed from 4.0.3)
[INFO] |  |  |  |  +- jakarta.persistence:jakarta.persistence-api:jar:3.2.0:compile (version managed from 3.2.0)
[INFO] |  |  |  +- org.hibernate.orm:hibernate-core:jar:7.2.4.Final:compile (version managed from 7.2.4.Final)
[INFO] |  |  |  |  +- jakarta.transaction:jakarta.transaction-api:jar:2.0.1:compile (version managed from 2.0.1)
[INFO] |  |  |  |  +- org.hibernate.models:hibernate-models:jar:1.0.1:runtime
[INFO] |  |  |  |  +- org.glassfish.jaxb:jaxb-runtime:jar:4.0.6:runtime (version managed from 4.0.6)
[INFO] |  |  |  |  |  \- org.glassfish.jaxb:jaxb-core:jar:4.0.6:runtime (version managed from 4.0.6)
[INFO] |  |  |  |  |     +- org.eclipse.angus:angus-activation:jar:2.0.3:runtime
[INFO] |  |  |  |  |     +- org.glassfish.jaxb:txw2:jar:4.0.6:runtime (version managed from 4.0.6)
[INFO] |  |  |  |  |     \- com.sun.istack:istack-commons-runtime:jar:4.1.2:runtime
[INFO] |  |  |  |  +- jakarta.inject:jakarta.inject-api:jar:2.0.1:runtime (version managed from 2.0.1)
[INFO] |  |  |  \- org.springframework:spring-orm:jar:7.0.5:compile (version managed from 7.0.5)
[INFO] |  |  +- org.springframework.data:spring-data-jpa:jar:4.0.3:compile (version managed from 4.0.3)
[INFO] |  |  |  +- org.antlr:antlr4-runtime:jar:4.13.2:compile
[INFO] |  |  \- org.springframework:spring-aspects:jar:7.0.5:compile (version managed from 7.0.5)
[INFO] |  |     \- org.aspectj:aspectjweaver:jar:1.9.25.1:compile (version managed from 1.9.25)
[INFO] |  \- org.springframework.boot:spring-boot-jdbc:jar:4.0.3:compile (version managed from 4.0.3)
[INFO] |     +- org.springframework.boot:spring-boot-sql:jar:4.0.3:compile (version managed from 4.0.3)
[INFO] |     +- org.springframework.boot:spring-boot-transaction:jar:4.0.3:compile (version managed from 4.0.3; scope not updated to compile)
[INFO] |     \- org.springframework:spring-jdbc:jar:7.0.5:compile (version managed from 7.0.5)
[INFO] +- org.springframework.boot:spring-boot-starter-validation:jar:4.0.3:compile
[INFO] |  \- org.springframework.boot:spring-boot-validation:jar:4.0.3:compile (version managed from 4.0.3)
[INFO] |     +- org.apache.tomcat.embed:tomcat-embed-el:jar:11.0.18:compile (version managed from 11.0.18)
[INFO] |     \- org.hibernate.validator:hibernate-validator:jar:9.0.1.Final:compile (version managed from 9.0.1.Final)
[INFO] |        +- jakarta.validation:jakarta.validation-api:jar:3.1.1:compile (version managed from 3.1.1)
[INFO] |        +- org.jboss.logging:jboss-logging:jar:3.6.2.Final:compile (version managed from 3.6.1.Final; scope not updated to compile)
[INFO] |        \- com.fasterxml:classmate:jar:1.7.3:compile (version managed from 1.7.0; scope not updated to compile)
[INFO] +- org.springframework.boot:spring-boot-starter-actuator:jar:4.0.3:compile
[INFO] |  +- org.springframework.boot:spring-boot-starter-micrometer-metrics:jar:4.0.3:compile (version managed from 4.0.3)
[INFO] |  |  \- org.springframework.boot:spring-boot-micrometer-metrics:jar:4.0.3:compile (version managed from 4.0.3)
[INFO] |  |     +- org.springframework.boot:spring-boot-micrometer-observation:jar:4.0.3:compile (version managed from 4.0.3)
[INFO] |  +- org.springframework.boot:spring-boot-actuator-autoconfigure:jar:4.0.3:compile (version managed from 4.0.3)
[INFO] |  |  \- org.springframework.boot:spring-boot-actuator:jar:4.0.3:compile (version managed from 4.0.3)
[INFO] |  +- org.springframework.boot:spring-boot-health:jar:4.0.3:compile (version managed from 4.0.3)
[INFO] |  +- io.micrometer:micrometer-observation:jar:1.16.3:compile (version managed from 1.16.3)
[INFO] |  |  \- io.micrometer:micrometer-commons:jar:1.16.3:compile (version managed from 1.16.3)
[INFO] |  \- io.micrometer:micrometer-jakarta9:jar:1.16.3:compile (version managed from 1.16.3)
[INFO] |     +- io.micrometer:micrometer-core:jar:1.16.3:compile (version managed from 1.16.3)
[INFO] |     |  +- org.hdrhistogram:HdrHistogram:jar:2.2.2:runtime
[INFO] |     |  \- org.latencyutils:LatencyUtils:jar:2.0.3:runtime
[INFO] +- org.springframework.boot:spring-boot-starter-security:jar:4.0.3:compile
[INFO] |  +- org.springframework.boot:spring-boot-security:jar:4.0.3:compile (version managed from 4.0.3)
[INFO] |  |  +- org.springframework.security:spring-security-config:jar:7.0.3:compile (version managed from 7.0.3)
[INFO] |  \- org.springframework:spring-aop:jar:7.0.5:compile (version managed from 7.0.5)
[INFO] |     +- org.springframework:spring-beans:jar:7.0.5:compile (version managed from 7.0.5)
[INFO] +- com.example:toolkit:jar:1.3-38:compile
[INFO] |  +- org.slf4j:slf4j-api:jar:2.0.17:compile (version managed from 2.0.7)
[INFO] |  +- (com.nimbusds:nimbus-jose-jwt:jar:10.5:compile - omitted for conflict with 9.37)
[INFO] |  +- org.bouncycastle:bcprov-jdk18on:jar:1.82:compile
[INFO] |  +- org.bouncycastle:bcpkix-jdk18on:jar:1.82:compile
[INFO] |  |  \- org.bouncycastle:bcutil-jdk18on:jar:1.82:compile
[INFO] |  +- com.courier:courier-java:jar:3.3.0:compile
[INFO] |  |  +- (com.squareup.okhttp3:okhttp:jar:4.12.0:compile - omitted for conflict with 5.0.0-alpha.14)
[INFO] |  |  +- com.fasterxml.jackson.datatype:jackson-datatype-jdk8:jar:2.20.2:compile (version managed from 2.12.3)
[INFO] |  +- (com.example.friendly-id:friendly-id:jar:1.1.0:compile - omitted for conflict with 2.0.0-SNAPSHOT)
[INFO] |  +- org.apache.commons:commons-lang3:jar:3.19.0:compile (version managed from 3.13.0; scope not updated to compile)
[INFO] |  +- jakarta.servlet:jakarta.servlet-api:jar:6.1.0:compile (version managed from 6.0.0)
[INFO] |  +- com.github.ulisesbocchio:jasypt-spring-boot-starter:jar:3.0.5:compile
[INFO] |  |  \- com.github.ulisesbocchio:jasypt-spring-boot:jar:3.0.5:compile
[INFO] |  |     \- org.jasypt:jasypt:jar:1.9.3:compile
[INFO] |  +- io.github.resilience4j:resilience4j-retry:jar:2.0.2:compile
[INFO] |  |  +- io.github.resilience4j:resilience4j-core:jar:2.0.2:compile
[INFO] |  \- io.vavr:vavr:jar:0.10.4:compile
[INFO] |     \- io.vavr:vavr-match:jar:0.10.4:compile
[INFO] +- org.springframework.boot:spring-boot-starter-amqp:jar:4.0.3:compile
[INFO] |  \- org.springframework.boot:spring-boot-amqp:jar:4.0.3:compile (version managed from 4.0.3)
[INFO] |     +- org.springframework:spring-messaging:jar:7.0.5:compile (version managed from 7.0.5)
[INFO] +- nl.big-o:liqp:jar:0.9.2.3:compile
[INFO] |  +- com.fasterxml.jackson.datatype:jackson-datatype-jsr310:jar:2.20.2:compile (version managed from 2.13.2)
[INFO] |  \- ua.co.k:strftime4j:jar:1.0.6:compile
[INFO] +- com.ibm.icu:icu4j:jar:78.2:compile
[INFO] +- com.slack.api:slack-api-client:jar:1.47.0:compile
[INFO] |  +- com.slack.api:slack-api-model:jar:1.47.0:compile
[INFO] |  +- (com.squareup.okhttp3:okhttp:jar:4.12.0:compile - omitted for conflict with 5.0.0-alpha.14)
[INFO] +- com.nimbusds:nimbus-jose-jwt:jar:9.37:compile (scope not updated to compile)
[INFO] |  \- com.github.stephenc.jcip:jcip-annotations:jar:1.0-1:compile
[INFO] +- org.jsoup:jsoup:jar:1.22.1:compile
[INFO] +- commons-validator:commons-validator:jar:1.10.1:compile
[INFO] +- org.postgresql:postgresql:jar:42.7.10:runtime
[INFO] |  \- org.checkerframework:checker-qual:jar:3.52.0:runtime
[INFO] +- org.liquibase:liquibase-core:jar:5.0.1:compile
[INFO] |  +- com.opencsv:opencsv:jar:5.12.0:compile
[INFO] |  |  +- (org.apache.commons:commons-text:jar:1.13.1:compile - omitted for conflict with 1.14.0)
[INFO] |  +- org.yaml:snakeyaml:jar:2.5:compile (version managed from 2.5)
[INFO] |  +- javax.xml.bind:jaxb-api:jar:2.3.1:compile
[INFO] |  +- org.apache.commons:commons-collections4:jar:4.5.0:compile
[INFO] |  +- org.apache.commons:commons-text:jar:1.14.0:compile
[INFO] |  \- commons-io:commons-io:jar:2.20.0:compile (scope not updated to compile)
[INFO] +- org.springframework.boot:spring-boot-starter-jooq:jar:4.0.3:compile
[INFO] |  +- org.springframework.boot:spring-boot-jooq:jar:4.0.3:compile (version managed from 4.0.3)
[INFO] +- org.jooq.pro:jooq:jar:3.20.8:compile
[INFO] |  \- io.r2dbc:r2dbc-spi:jar:1.0.0.RELEASE:compile (version managed from 1.0.0.RELEASE)
[INFO] |     \- org.reactivestreams:reactive-streams:jar:1.0.4:compile (version managed from 1.0.3)
[INFO] +- org.projectlombok:lombok:jar:1.18.42:compile
[INFO] +- net.logstash.logback:logstash-logback-encoder:jar:8.0:compile
[INFO] +- com.datadoghq:dd-trace-api:jar:1.60.1:compile
[INFO] +- io.projectreactor:reactor-test:jar:3.8.3:test
[INFO] |  +- io.projectreactor:reactor-core:jar:3.8.3:compile (version managed from 3.8.3; scope not updated to compile)
[INFO] +- org.awaitility:awaitility:jar:4.3.0:test (scope not updated to test)
[INFO] +- org.testcontainers:testcontainers-junit-jupiter:jar:2.0.3:test
[INFO] +- org.testcontainers:testcontainers-postgresql:jar:2.0.3:test
[INFO] |  \- org.testcontainers:testcontainers-jdbc:jar:2.0.3:test (version managed from 2.0.3)
[INFO] |     \- org.testcontainers:testcontainers-database-commons:jar:2.0.3:test (version managed from 2.0.3)
[INFO] \- org.testcontainers:testcontainers-rabbitmq:jar:2.0.3:test
[INFO] BUILD SUCCESS
