src/cmds/jvm/snapshots/rtk__cmds__jvm__mvn_cmd__tests__snapshot_enriched_surefire_and_failsafe.snap
---
source: src/cmds/jvm/mvn_cmd.rs
expression: out.text
---
[ERROR] Tests run: 12, Failures: 4, Errors: 0, Skipped: 0
[INFO] BUILD FAILURE

[ERROR] Failures:
[ERROR]   com.example.FailingTest.shouldReturnUser <<< FAILURE!
[ERROR]     AssertionFailedError: expected:<200> but was:<404>
[ERROR]       	... 1 framework frames omitted
[ERROR]       	at com.example.FailingTest.shouldReturnUser(FailingTest.java:42)
[ERROR]       	... 1 framework frames omitted

[ERROR]   com.example.FailingTest.shouldHandleNull <<< FAILURE!
[ERROR]     AssertionError: Unexpected exception: NullPointerException
[ERROR]       	at com.example.FailingTest.shouldHandleNull(FailingTest.java:55)
[ERROR]       	... 1 framework frames omitted



[ERROR] Integration failures:
[ERROR]   com.example.PortConflictIT.shouldStartServer <<< FAILURE!
[ERROR]     [error] BindException: Address already in use
[ERROR]       	... 2 framework frames omitted
[ERROR]       	at com.example.PortConflictIT.shouldStartServer(PortConflictIT.java:42)

[ERROR]   com.example.DbIntegrationIT.shouldConnect <<< FAILURE!
[ERROR]     [error] IllegalStateException: Failed to load ApplicationContext
[ERROR]       	... 3 framework frames omitted
[ERROR]       Caused by: org.springframework.beans.factory.BeanCreationException: Error creating bean with name 'dataSource'
[ERROR]       	... 3 framework frames omitted
[ERROR]       Caused by: org.hibernate.HibernateException: Unable to acquire JDBC Connection; nested exception is java.sql.SQLTransientConnectionException: HikariPool-1 - Connection is not available, request timed out after 30000ms.
[ERROR]       	... 1 framework frames omitted
[ERROR]       	at com.example.DbIntegrationIT.shouldConnect(DbIntegrationIT.java:88)
[ERROR]       	... 1 framework frames omitted
[ERROR]     captured output:
[ERROR]       [STDERR]
[ERROR]       2026-04-15 10:42:17 ERROR HikariDataSource - HikariPool-1 - Connection is not available
[ERROR]       Connection refused (Connection refused)



(reports: 1 surefire, 2 failsafe)
