src/cmds/jvm/snapshots/rtk__cmds__jvm__mvn_cmd__tests__snapshot_enriched_surefire_only.snap
---
source: src/cmds/jvm/mvn_cmd.rs
assertion_line: 6031
expression: out.text
---
[ERROR] Tests run: 7, Failures: 2, Errors: 0, Skipped: 0
[INFO] BUILD FAILURE

[ERROR] Failures:
[ERROR]   com.example.FailingTest.shouldReturnUser <<< FAILURE!
[ERROR]     AssertionFailedError: expected:<200> but was:<404>
[ERROR]       	... 1 framework frames omitted
[ERROR]       	at com.example.FailingTest.shouldReturnUser(FailingTest.java:42)
[ERROR]       	... 1 framework frames omitted

[ERROR]   com.example.FailingTest.shouldHandleNull <<< FAILURE!
[ERROR]     AssertionError: Unexpected exception: NullPointerException
[ERROR]       	at com.example.FailingTest.shouldHandleNull(FailingTest.java:55)
[ERROR]       	... 1 framework frames omitted



(reports: 2 surefire)
